# python-redsys

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml  release.yml
redsys/: __init__.py  client.py  constants.py  request.py  response.py
redsys/tests/: test_client.py  test_request.py  test_response.py
