[tool.poetry]
name = "python-redsys"
version = "1.2.0"
description = "A simple, clean and less dependant client to handle payments through Redsys."
authors = ["Andrés Reverón Molina <andres@reveronmolina.me>", "David Díaz <d.diazp@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/systemallica/python-redsys"
classifiers = [
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
]
packages = [
    { include = "redsys" }
]

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = "^3.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"
mypy = "^1.6.1"
python-semantic-release = "^7.34.6"
ruff = "^0.1.3"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E","F","UP","B","SIM","I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.isort]
force-single-line = true

[tool.semantic_release]
version_variable = [
  "redsys/__init__.py:__version__",
]
version_toml = ["pyproject.toml:tool.poetry.version"]
upload_to_pypi = true
upload_to_release = true
build_command = "poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
