[project]
name = "python-redsys"
version = "1.2.0"
description = "A simple, clean and less dependant client to handle payments through Redsys."
authors = [
    { name = "Andrés Reverón Molina", email = "andres@reveronmolina.me" },
    { name = "David Díaz", email = "d.diazp@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.15"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pycryptodome>=3.23.0,<4",
]

[project.urls]
Homepage = "https://github.com/systemallica/python-redsys"

[dependency-groups]
dev = [
    "mypy>=1.6.1,<2",
    "pre-commit>=3.5.0,<4",
    "pytest>=8.3.5,<9",
    "pytest-cov>=5,<8",
    "python-semantic-release>=7.34.6,<8",
    "ruff>=0.12.0,<1",
]

[tool.uv.build-backend]
module-name = "redsys"
module-root = ""

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E","F","UP","B","SIM","I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true

[tool.semantic_release]
version_variable = [
  "redsys/__init__.py:__version__",
]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = true
upload_to_release = true
build_command = "uv build"

[build-system]
requires = ["uv_build>=0.11.24,<0.12"]
build-backend = "uv_build"
